--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   </head>
 
   <script src="engine.js" defer></script> 
+  <script src="helper.js" defer></script> 
 
   <!-- UNCOMMENT ALL THE CODE SCRIPTS THAT NEED TO BE GENERATED -->
-  <script src="example.js" defer> </script>
+  <!-- <script src="example.js" defer> </script> -->
   <!-- -------------------------------------------------------- -->
 
   <style>
