Writing empty lines

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <!-- UNCOMMENT ALL THE CODE SCRIPTS THAT NEED TO BE GENERATED -->
   <!-- <script src="example.js" defer> </script> -->
+  <script src="BellmanFord.js" defer> </script>
   <!-- -------------------------------------------------------- -->
 
   <style>
