Fixed HTML Whitespace, added pacakge statement and imports

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
   <body>
     <div class="content">
       <!-- This is where our generated code will go -->
-      <pre>
-      <code id="code-block" class="language-java"></code>
-    </pre>
+      <pre><code id="code-block" class="language-java"></code></pre>
     </div>
   </body>
 </html>
