BMF Helper functions, defined HTML characterset

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>BattleCodeGenerator</title>
   </head>
 
+  <meta charset="UTF-8">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.4.0/build/styles/github-dark.min.css">
   <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.4.0/build/highlight.min.js"></script>
 
