Restructured with testing in mind

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.4.0/build/styles/github-dark.min.css">
   <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.4.0/build/highlight.min.js"></script>
 
-  <script src="engine.js" defer></script>
-  <script src="helper.js" defer></script>
+  <script src="src/engine.js" defer></script>
+  <script src="src/helper.js" defer></script>
 
   <!-- UNCOMMENT ALL THE CODE SCRIPTS THAT NEED TO BE GENERATED -->
-  <!-- <script src="example.js" defer> </script> -->
-  <script src="BellmanFord.js" defer></script>
+  <!-- <script src="src/example.js" defer> </script> -->
+  <script src="src/BellmanFord.js" defer></script>
   <!-- -------------------------------------------------------- -->
 
   <script> // Markup for code
